# quotes_moubarac_goucem_E

./: CMakeLists.txt  README.md  main.c  utils.c
include/: bmp24.h  bmp8.h  histogramme.h  utils.h
src/: bmp24.c  bmp8.c  histogramme.c
tests/: test_1.c  test_24bit.c  test_8bit.c
